# advanced-pipeline

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  text_analyzer.py
tests/: __init__.py  test_text_analyzer.py
