[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-analyzer-demo"
version = "1.0.0"
description = "A simple text analyzer demonstrating GitHub Actions CI/CD"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Allan McDonald", email = "allan.mcdonald@itas.ca"}
]
classifiers = [
    "Development Status :: 1 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.0",
    "bandit>=1.7",
]

[tool.black]
line-length = 100
target-version = ['py312', 'py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
